# polyglot

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  capabilities.md  dub.json  format.sh  licenses.sh
core/: CppTypeProxyWriter.cpp  CppTypeProxyWriter.h  CppWrapperWriter.cpp  CppWrapperWriter.h  DWrapperWriter.cpp  DWrapperWriter.h  PolyglotAST.cpp  PolyglotAST.h  RustWrapperWriter.cpp  RustWrapperWriter.h  TypeProxyWriter.h  Utils.cpp  Utils.h  WrapperWriter.cpp  WrapperWriter.h  ZigWrapperWriter.cpp  ZigWrapperWriter.h
examples/: Examples.md
examples/example1/: README.md  example1.cpp  example1.h  main.d  polybuild.yml
examples/example2/: README.md  example2.cpp  example2.h  main.rs  polybuild.yml
examples/example3/: README.md  example3.cpp  polybuild.yml
examples/example4/: README.md  polybuild.yml
examples/example5/: README.md  example5.cpp  example5d.d  main.zig  polybuild.yml
polybuild/: README.md  dub.json
polybuild/src/: Buildfile.d  CppHelper.d  RustHelper.d  WrapSources.d  build.d  buildfile.d  cpphelper.d  main.d  options.d  rusthelper.d  wrapsources.d
polyglot-cpp/: CppParser.cpp  CppParser.h  CppUtils.cpp  CppUtils.h  main.cpp
polyglot-d/: dub.json
polyglot-d/src/: main.d
polyglot-zig/: Readme.md  build.zig  build.zig.zon
polyglot-zig/src/: main.zig
src/: main.cpp
src/core/: DWrapperWriter.cpp  DWrapperWriter.h  PolyglotAST.cpp  PolyglotAST.h  RustWrapperWriter.cpp  RustWrapperWriter.h  WrapperWriter.cpp  WrapperWriter.h
src/cppscanner/: CppBindingGenerator.cpp  CppBindingGenerator.h  CppParser.cpp  CppParser.h  DGen.cpp  DGen.h  RustGen.cpp  RustGen.h  Utils.cpp  Utils.h  main.cpp
src/polybuild/: RustHelper.d  main.d
src/rustscanner/: Cargo.toml  main.rs
tests/: Tests.md
tests/test1/: README.md  main.d  test1.cpp
tests/test2/: README.md  main.rs
tests/test3/: README.md
tests/test4/: README.md  test4.rs
