[package]
name = "rustscanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.33"
syn = { version = "2.0.29", features = ["full", "parsing", "visit"] }

[[bin]]
name = "rustscanner"
path = "main.rs"
